fixed comments scrolling for overflow-x

--- a/stylesheets/details.less
+++ b/stylesheets/details.less
@@ -437,3 +437,9 @@
   -o-transition: opacity 0.5s ease-in;
   transition: opacity 0.5s ease-in;
 }
+
+.comment-post {
+    display: inline-block;
+    width: 240px;
+    overflow-x: hidden;
+}
